Git_WGBH_QC/src/objects/Site_Visit__c.object
<CustomObject>
    <description>Temporary object created to present a dashboard with details of number of visitors on WGBH site and the amount of donation received.</description>
    <fields>
        <fullName>Avg_Daily_Visitors__c</fullName>
        <formula>Visitors__c / Days_of_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Daily Visitors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Visits__c</fullName>
        <formula>Visits__c /  Days_of_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Daily Visits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Time_on_Site__c</fullName>
        <label>Avg Time on Site</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate__c</fullName>
        <label>Bounce Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_of_Month__c</fullName>
        <label>Days_of_Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Revenue__c</fullName>
        <label>Membership_Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>Jul-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec-09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009 AVG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010 AVG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011 projections</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PageViews__c</fullName>
        <label>PageViews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiteActivity_date__c</fullName>
        <label>SiteActivity_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visitors__c</fullName>
        <label>Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site_Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Avg_Daily_Visitors__c</columns>
        <columns>Avg_Daily_Visits__c</columns>
        <columns>Avg_Time_on_Site__c</columns>
        <columns>Bounce_Rate__c</columns>
        <columns>Days_of_Month__c</columns>
        <columns>Membership_Revenue__c</columns>
        <columns>Metric__c</columns>
        <columns>PageViews__c</columns>
        <columns>SiteActivity_date__c</columns>
        <columns>Visitors__c</columns>
        <columns>Visits__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DashBoard_SiteVisit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site_Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>